[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy-ranks-pdf"
version = "0.1.0"
description = "Cross-platform CLI to fetch ESPN fantasy rankings and export styled PDFs."
readme = "README.md"
authors = [
  { name = "Evan Addeo" }
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["fantasy", "football", "ESPN", "PDF", "CLI", "rankings"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Utilities",
]
dependencies = [
  "httpx>=0.27,<0.28",
  "pandas>=2.2,<2.3",
  "beautifulsoup4>=4.12,<4.13",
  "lxml>=5.2,<5.3",
  "platformdirs>=4.2,<4.3",
  "typer[all]>=0.12,<0.13",
  "rich>=13.7,<13.8",
  "pydantic>=2.7,<2.8",
  "fpdf2>=2.7,<2.8",
]

[project.optional-dependencies]
# Extra groups for future providers
sleeper = []
yahoo = []
providers = []

dev = [
  "ruff>=0.5,<0.6",
  "black>=24.4,<24.5",
  "mypy>=1.10,<1.11",
  "pytest>=8.2,<8.3",
  "pytest-cov>=5.0,<5.1",
  "pre-commit>=3.7,<3.8",
]

[project.scripts]
fantasy-ranks = "fantasy_ranks.cli:main"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["fantasy_ranks*"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
fix = true
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.isort]
known-first-party = ["fantasy_ranks"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
strict = true
pretty = true
show_error_context = true

[tool.coverage.run]
branch = true
source = ["fantasy_ranks"]
